After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 679295 - bridge.c:remove_events - bad code
bridge.c:remove_events - bad code
Status: RESOLVED FIXED
Product: at-spi
Classification: Platform
Component: at-spi2-atk
unspecified
Other Linux
: Normal normal
: ---
Assigned To: Li Yuan
At-spi maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2012-07-03 01:25 UTC by Matthias Clasen
Modified: 2012-08-20 19:31 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Matthias Clasen 2012-07-03 01:25:20 UTC
The code in remove_events loops over a GList to find an element to remove.
Which is ok. But when it has found the element, it calls g_list_remove, which iterates the entire list again, needlessly.
Comment 1 Mike Gorse 2012-08-20 19:31:52 UTC
Fixed for 2.5.90; commit 3cdd2e.