Don't iterate over the list twice when removing events

https://bugzilla.gnome.org/show_bug.cgi?id=679295